--- a/page4/style.css
+++ b/page4/style.css
@@ -60,6 +60,9 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    margin-right: 10px;
+    margin-bottom: 10px;
+
 
 }
 .col-2 {
@@ -67,6 +70,9 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    margin-right: 10px;
+    margin-bottom: 10px;
+
 
 }
 .col-3 {
@@ -74,6 +80,8 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    margin-bottom: 10px;
+
 
 }
 .in-img-0 {
