--- a/page2/style.css
+++ b/page2/style.css
@@ -1,20 +1,155 @@
  @font-face {
-     font-family: "font0";
-     src: url("fonts/Roboto-Light.ttf") format("truetype");
+     font-family: "light-font";
+     src: url("../fonts/Roboto-Light.ttf") format("truetype");
  }
 
  @font-face {
-     font-family: "font1";
-     src: url("fonts/Roboto-Regular.ttf") format("truetype");
+     font-family: "regular-font";
+     src: url("../fonts/Roboto-Regular.ttf") format("truetype");
+ }
+
+ div {
+     /* border: 1px solid black; */
  }
 
  body {
-     margin: 0;
- }
-
- header {
-     background-color: rgb(14, 124, 228);
-     height: 10px;
+     /* padding: .5em; */
      width: 100%;
  }
 
+ header {
+     background-color: #206db6;
+     height: 11px;
+     width: 100%;
+ }
+
+ /* h1 {
+     font-family: light-font;
+     font-weight: normal;
+     color: #206db6;
+ } */
+
+ .wrapper {
+     display: flex;
+     flex-direction: column;
+     /* margin: .5em; */
+     /* justify-content: center; */
+     /* align-items: stretch; */
+     /* align-content: center; */
+     /* border: 1px solid black; */
+ }
+
+ .top-box {
+     /* padding: .5em; */
+     display: flex;
+     flex-direction: column;
+     width: 100%;
+     border: 1px solid rgb(0, 4, 255);
+     height: 20em;
+ }
+
+ .top-box-1 {
+     border: 1px solid rgb(0, 0, 0);
+     display: flex;
+     flex-direction: row;
+     align-items: flex-start;
+     /* margin: 5em; */
+ }
+
+ .growth {
+     border: 1px solid rgb(0, 0, 0);
+     align-self: flex-start;
+     /* margin: 5em; */
+
+ }
+ .knows{
+    border: 1px solid rgb(0, 0, 0);
+    align-self: flex-start;
+    /* padding: 5em; */
+ }
+
+ .top-box-2 {
+     display: flex;
+     flex-direction: row;
+     /* margin: 5em; */
+     border: 1px solid rgb(255, 0, 0);
+
+     align-items: flex-end;
+ }
+
+ .mid-box {
+     /* margin: 1em; */
+     /* padding: .5em; */
+     /* max-width: 46.5%; */
+     /* max-height: 100%; */
+ }
+
+ .bottom-box {
+     border: none;
+     justify-content: space-evenly;
+     padding: .5em;
+     display: flex;
+     flex-direction: row;
+     width: 100%;
+     /* margin-right: 15%; */
+     /* border: 1px solid rgb(255, 0, 0); */
+ }
+
+ .img {
+     width: 100%;
+     height: 100%;
+ }
+
+ .img-box {
+     /* width: 100%; */
+ }
+
+ .bottom-caption {
+     text-align: end;
+     font-family: light-font;
+     font-size: 200%;
+     font-weight: normal;
+ }
+
+ .para {
+     font-family: light-font;
+     color: #788382;
+     width: 90%;
+ }
+
+ .content {
+     padding: 8em 0px 35px 40px;
+     margin: 0%;
+ }
+
+ .para em {
+     font-family: regular-font;
+ }
+
+ .title h1 {
+     /* padding: 5em 5em 1em 2.5em; */
+     /* margin-bottom: -20%; */
+     /* margin-left: 10%; */
+ }
+
+ .qu h1 {
+     font-family: light-font;
+     font-size: 250px;
+ }
+
+ .start-quotation {
+     position: relative;
+     width: 30px;
+     left: 18px;
+     bottom: 11.5px;
+     filter: opacity(25%);
+ }
+
+ .end-quotation {
+     position: relative;
+     width: 32px;
+     left: 9px;
+     bottom: 47px;
+     filter: opacity(25%);
+     transform: scaleX(-1);
+ }
